Datagen fix: step 1